# few-shot-image-gen-app

./: README.md  app.py  pyproject.toml  test.py
few_shot_image_gen_app/: data_classes.py  selenium_fns.py  session.py  utils.py
few_shot_image_gen_app/crawling/: midjourney.py  openart_ai.py  selenium_fns.py
few_shot_image_gen_app/frontend/: sidebar.py  views.py
few_shot_image_gen_app/image/: conversion.py  generate.py
templates/: midjourney_prompt_gen.json  stable_diffusion_prompt_gen.json
