[tool.poetry]
name = "few-shot-image-gen-app"
version = "0.1.0"
description = ""
authors = ["fteutsch <florianteutsch@yahoo.de>"]
readme = "README.md"
packages = [{include = "few_shot_image_gen_app"}]

[tool.poetry.dependencies]
python = "^3.10"
llm-few-shot-gen = "^0.0.3"
streamlit = "^1.28.0"
requests = "^2.31.0"
openai = "^0.28.1"
selenium = "^4.14.0"
undetected-chromedriver = "^3.5.3"
seleniumbase = "^4.20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
