[tool.poetry]
name = "few-shot-image-gen-app"
version = "0.1.0"
description = ""
authors = ["fteutsch <florianteutsch@yahoo.de>"]
readme = "README.md"
packages = [{include = "few_shot_image_gen_app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.28.0"
requests = "~2.31.0"
openai = "~0.27.0"
selenium = "^4.10"
undetected-chromedriver = "3.5.0"
seleniumbase = "^4.15"
replicate = "^0.18.0"
llm-prompting-gen = "^0.1.3"
langchain-community = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
